--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -81,6 +81,7 @@ button {
     border-radius: 3px;
     outline: none;
     color: var(--white);
+    background-color: var(--white);
 }
 
 .main-screen-button-wrapper {
