--- a/src/styles/level.css
+++ b/src/styles/level.css
@@ -34,7 +34,7 @@
 /* color swatches */
 
 .colors-swatches {
-    padding: 50px 0;
+    padding: 25px 0;
 }
 
 .colors-swatches ul {
@@ -55,13 +55,12 @@
 }
 
 .brush-color {
-    width: 100px;
-    height: 100px;
+    width: 70%;
     margin: 0 auto;
 }
 
 .reset-wrapper {
     display: flex;
     justify-content: center;
-    padding-top: 50px;;
+    padding-top: 40px;;
 }
